--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </section> 
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2025 Your Name. All rights reserved.</p>
+            <p>&copy; 2025 Shivam Semwal. All rights reserved.</p>
             <div class="social-links">
                 <a href="mailto:ssemwal116@gmail.com" target="_blank" aria-label="Mail">
                     <img src="./assets/communication.png" alt="Mail" />
